--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section class="section" id="section">
         <div class="container">
             <div class="section__nav anim">
-                <!-- <div class="section__nav-box-first anim">
+                <div class="section__nav-box-first anim">
                     <div class="section__nav-box-first-blur">
                         <h1 class="section__nav-box-first-text ">
                             Стоматологическая клиника
@@ -71,13 +71,13 @@
                         </p>
                     </div>
 
-                </div> -->
+                </div>
 
             </div>
         </div>
     </section>
 
-    <!-- <div class="info" id="info">
+    <div class="info" id="info">
         <div class="container">
             <div class="info__nav anim">
                 <div class="info__nav-box1">
@@ -151,9 +151,9 @@
 
             </div>
         </div>
-    </div> -->
+    </div>
 
-    <!-- <div class="AboutUs" id="AboutUs">
+    <div class="AboutUs" id="AboutUs">
         <div class="container">
             <div class="AboutUs__nav anim">
                 <div class="AboutaUs__nav-wrap">
@@ -192,9 +192,9 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
 
-    <!-- <div class="contacts" id="contacts">
+    <div class="contacts" id="contacts">
         <div class="container">
             <div class="contacts__nav anim">
                 <div class="contacts__nav-wrap">
@@ -224,8 +224,8 @@
                 </div>
             </div>
         </div>
-    </div> -->
-    <!-- <div class="maps">
+    </div>
+    <div class="maps">
         <div class="container">
 
         
@@ -237,7 +237,7 @@
         
 
         </div>
-    </div> -->
+    </div>
 
 </body>
 
